# vrm_pp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindVrm_pp.cmake  Findvrm_pp.cmake
generator/: CMakeLists.txt  generator.cpp  vrm_pp_generator.cpp
include/vrm/: pp.hpp
include/vrm/pp/: arg_count.hpp  arithmetic.hpp  bool.hpp  cat.hpp  eval.hpp  for_each.hpp  generated.hpp  repeat.hpp  sep.hpp  sep_to_str.hpp  tpl.hpp  utils.hpp
test/: CMakeLists.txt  and.cpp  arg_count.cpp  bool.cpp  cat.cpp  for_reverse_0.cpp  for_reverse_1.cpp  if.cpp  increment.cpp  nor.cpp  not.cpp  or.cpp  raw_lambda.cpp  repeat.cpp  sep_to_str_0.cpp  sep_to_str_1.cpp  should_not_pass.cpp  should_pass.cpp  tpl_elem.cpp  tpl_explode.cpp  tpl_fill.cpp  tpl_head_tail.cpp  tpl_push.cpp  tpl_size.cpp  utils.cpp  xor.cpp
test/basic/: should_pass.cpp
test/generator/: generated_file_exists.cpp  generator_works.cpp
test/utils/: test_utils.hpp
